# Melodex

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  capacitor.config.json  docker-compose.yml  package-lock.json  package.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: android-ci.yml  android-release.yml  desktop-lyrics-ci.yml
android/: CI_CD_PLAN.md  README.md  build.cmd  build.gradle.kts  build.ps1  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/scripts/: configure-github-android-release.ps1  provision-release-signing.ps1  resolve-release-version.mjs  resolve-release-version.test.mjs  verify-local-release.ps1
android/web/: index.html
backend/: go.mod  go.sum
backend/cmd/backfill-albums/: main.go
backend/cmd/music-dl/: backfill_lyrics.go
backend/core/: audio_ext_test.go  config_store.go  cookie_status_test.go  cover_cache.go  cover_cache_test.go  database.go  download.go  download_test.go  qr_login_test.go  service.go
backend/internal/maintenance/: lyrics_backfill.go  lyrics_backfill_test.go
backend/internal/web/: album_metadata_cache.go  api_cache.go  auth.go  auth_api.go  auth_api_test.go  auth_test.go  background_cache.go  collection.go  collection_import_test.go  collection_test.go  cookie_status_test.go  db_migration.go  desktop_lyrics_auth.go  desktop_lyrics_hub.go  desktop_lyrics_test.go  download_record.go  download_status_test.go  favorites.go  favorites_test.go  http_safety.go  isolation_test.go  json_api.go  local_music.go  local_music_test.go  lyric_fallback.go  lyric_fallback_test.go  lyric_original_test.go  lyric_search_test.go  lyric_test.go  m3u_import.go  m3u_import_test.go  media_session_test.go  music.go  play_history.go  play_history_test.go  playback_chunk.go  playback_diagnostics.go  playback_diagnostics_test.go  playback_segment.go  playback_segment_test.go  (+37 more)
desktop/: README.md
desktop-prismqml/: .gitignore  CMakeLists.txt  README.md  app_config.json  main.py  requirements.txt  run-local.config.example.psd1  run-local.ps1
desktop-prismqml/cpp/: ApiClient.cpp  ApplicationConfig.cpp  AuthenticatedHttpProxy.cpp  AuthenticatedHttpProxyPrivate.h  AuthenticatedHttpProxySession.cpp  CollectionController.cpp  CookieStore.cpp  DesktopState.cpp  JsonUtils.cpp  Lyrics.cpp  PlaybackStateStore.cpp  PlayerController.cpp  PlayerPersistence.cpp  UserSettings.cpp  main.cpp
desktop-prismqml/cpp/include/melodex/: ApiClient.h  ApplicationConfig.h  AuthenticatedHttpProxy.h  CollectionController.h  CookieStore.h  DesktopState.h  JsonUtils.h  Lyrics.h  PlaybackStateStore.h  PlayerController.h  UserSettings.h
desktop-prismqml/cpp/tests/: playback_probe.cpp  test_contracts.cpp  test_playback_proxy.cpp
desktop-prismqml/melodex_desktop/: __init__.py  api_client.py  collection_controller.py  config.py  cookie_jar.py  desktop_state.py  lyrics.py  playback_proxy.py  playback_state.py  player.py
desktop-prismqml/qml/: main.qml
desktop-prismqml/qml/components/: DesktopLyricsWindow.qml  PlaybackQueueDrawer.qml  PlayerBar.qml  SongRow.qml  WordFill.qml
desktop-prismqml/qml/pages/: HomePage.qml  LoginPage.qml  NowPlayingPage.qml  PlaylistsPage.qml  SearchPage.qml  SettingsPage.qml
desktop-prismqml/tests/: test_api_client.py  test_card_padding_contract.py  test_collection_controller.py  test_config.py  test_cookie_jar.py  test_local_runner_contract.py  test_lyrics.py  test_native_shell_contract.py  test_now_playing_lyric_density.py  test_playback_proxy.py  test_playback_state.py  test_playlist_cover_contract.py  test_startup_window.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/ui/: index.html  lyricsCore.js  lyricsCore.test.mjs  overlay.css  overlay.html  overlay.js  settings.css  settings.js
docs/: music-recognition-plan.md  pwa-offline-audio-plan.md  pwa-offline-audio-validation.md  sleep-timer-plan.md  ux-redesign-plan.md
frontend/: .env.example  .env.production  .gitignore  README.md  THIRD-PARTY-LICENSES.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: sw-force-reload.js
frontend/scripts/: appWakePolicy.test.mjs  audioProbe.test.mjs  nativePlayback.test.mjs  playerDesktopLyrics.test.mjs  playerMediaSource.test.mjs  playerPauseRecovery.test.mjs  playerPrefetch.test.mjs  playerQueue.test.mjs  pwaUpdatePolicy.test.mjs  serverDownloads.test.mjs  swForceReload.test.mjs
frontend/src/: App.js  index.css  index.js  pwaUpdatePolicy.js
frontend/src/components/: AddToPlaylistModal.js  ArtistCard.js  ArtistModal.js  Artists.js  AuthGate.js  CoverMosaic.js  DesktopLyricsBridge.js  DesktopLyricsSettings.js  DesktopLyricsWindow.js  Discover.js  Download.js  FAQ.js  Footer.js  Hero.js  HighlightedLyricMatch.js  ImportPlaylistModal.js  LoadingState.js  LocalMusic.js  MyPlaylist.js  Navbar.js  OfflineMusic.js  PlaylistSongs.js  RecentlyPlayed.js  SearchAlbumRow.js  Settings.js  Sidebar.js  SleepTimerControl.js  SongRow.js  TopBar.js  TrackCard.js  TrackModal.js  TrackTable.js  Trending.js  UserManagement.js  Videogen.js
frontend/src/contexts/: AuthContext.js  CollectionsContext.js  FeedbackContext.js  NativePlayerProvider.js  PlayerContext.js  ServerDownloadsContext.js  appWakePolicy.js  nativePlayback.js  playerAuth.js  playerAutoDownload.js  playerDesktopLyrics.js  playerMediaSource.js  playerPauseRecovery.js  playerPlayback.js  playerPrefetch.js  (+3 more)
(+43 files in other folders)
