[package]
name = "melodex-desktop-lyrics"
version = "0.1.0"
description = "Melodex Windows/macOS transparent desktop lyrics helper"
authors = ["Kotori <kotori@9li.life>"]
edition = "2021"
license = "AGPL-3.0-only"

[build-dependencies]
tauri-build = { version = "=2.5.4", features = [] }

[dependencies]
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.10.1", features = ["image-png", "macos-private-api", "tray-icon"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
